--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
         <a href="#">The Studio (Creative)</a>
         <a href="#">The Shop (Stickers)</a>
     </div>
+    <div class="gallery">
+    <div class="gallery-item"><img src="your-sticker-image.jpg" alt="Sticker Design"></div>
+    <div class="gallery-item"><img src="your-photo.jpg" alt="Photography"></div>
+    </div>
+
 </body>
 </html>
