--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>WRLDWDE Inc.</h1>
-        <p>Precision meets Perception.</p>
-    </header>
+    <img src="IMG_8010.png" alt="WRLDWDE Logo" style="width: 100px;">
+    <h1>WRLDWDE Inc.</h1>
+    <p>Precision meets Perception.</p>
+</header>
+
 
     <section class="about">
         <h2>The Global Collective</h2>
         <p>Bridging the gap between theoretical physics and creative media.</p>
     </section>
 
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="IMG_8010.png" alt="WRLDWDE Logo">
+        </div>
+    </div>
     <div class="links">
         <a href="#">The Lab (Physics)</a>
         <a href="#">The Studio (Creative)</a>
